# tychee-monorepo

./: .env.local.example  .gitignore  LICENSE  LICENSE-COMMERCIAL  README.md  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
.github/: CONTRIBUTING.md
docs/: DEPLOYMENT.md  ENCRYPTION.md
prisma/: schema.sql
scripts/: deploy-contracts.sh
sdk/: .npmignore  CHANGELOG.md  LICENSE  README.md  package.json
sdk/src/: crypto.ts  index.ts  types.ts
sdk/src/core/: engine.ts
soroban/: Cargo.toml  LICENSE-SOROBAN
soroban/contracts/account_abstraction/: Cargo.toml
soroban/contracts/account_abstraction/src/: lib.rs
soroban/contracts/token_vault/: Cargo.toml
soroban/contracts/token_vault/src/: lib.rs  test.rs
src/: LICENSE
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/cards/: route.ts
src/app/api/partners/: route.ts
src/app/api/points/: route.ts
src/app/api/products/: route.ts
src/app/api/research/: route.ts
src/app/api/spends/: route.ts
src/app/api/users/: route.ts
src/app/api/vouchers/: route.ts
src/app/cards/: page.tsx
src/app/partners/: page.tsx
src/app/rewards/: page.tsx
src/app/spends/: page.tsx
src/app/store/: page.tsx
src/app/vouchers/: page.tsx
src/components/: navigation.tsx
src/components/ui/: toaster.tsx
src/context/: WalletContext.tsx
src/lib/: auth-context.tsx  db.ts  soroban-client.ts  tychee-client.ts  utils.ts
