[workspace]
members = [
    "contracts/token_vault",
    "contracts/account_abstraction",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.71.0"

[workspace.dependencies]
soroban-sdk = "25.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
